BITE/css/styles.css
@font-face {
  font-family: 'FrizQuadrata';
  src: url('FrizQuadrata.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
       url('FrizQuadrata.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@font-face {
    font-family: 'socicon';
    src: url('../font/socicon-webfont.eot');
    src: url('../font/socicon-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/socicon-webfont.woff') format('woff'),
         url('../font/socicon-webfont.ttf') format('truetype'),
         url('../font/socicon-webfont.svg#sociconregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
.socicon {
    font-family: 'socicon' !important;
    color: #e7e7e7;
    padding: 10px;
    -webkit-transition-delay: 0s;
-webkit-transition-duration: 0.2s;
-webkit-transition-property: color;
-webkit-transition-timing-function: linear;
}
.socicon:hover {
color: #c8a555;
text-decoration: none;
}
.socicon:hover.facebook {
color: #49659f;
text-decoration: none;
}

.socicon:hover.twitter {
color: #23abe2;
text-decoration: none;
}
.socicon:hover.rss {
color: #f9a934;
text-decoration: none;
}
.socicon:hover.instagram {
color: #c6b7a3;
text-decoration: none;
}
.socicon:hover.vimeo {
color: #1bb6ec;
text-decoration: none;
}

.nav-social {
  margin-top: 20px;
  z-index: 1001;
  position: fixed;
  margin-right: 15px;
  right: 0;
  background-color: #000;
  top: 0;
}

body {
  font-family: 'Roboto Slab', sans-serif;
  background-color: #FFF;
}

.container {
  width: 95%;
}

.navbar-collapse {
  color:#999;
}
  a:hover {
    /*text-decoration: none;*/
    color: inherit;
  }

#nav-menu {
  margin-top: 20px;
  margin-left: 25%;
}

#nav-menu a {
  margin-right: 23px;
  margin-left: 22px;
}

@media screen and (max-width: 768px) {
  #nav-menu a {
    display:block;
    margin:10px;
  }

  #nav-menu button {
    margin:10px;
  }
}
.navbar-header .navbar-brand {
  color:white;
  font-size: 33px;
  font-variant: small-caps;
  letter-spacing: 3px;
}

.navbar {
  margin-bottom: 0px;
  border-radius: 0;
}

body {
  font-family: 'Roboto Slab', sans-serif;
  background-color: #FFF;
}



@media (min-width: 992px) {
  a:hover {
    /*text-decoration: none;*/
    color: inherit;
  }
}




  h4.article-title {
  color: #000;
  padding: 8px 20px;
  font-size: 42px;
  text-align: center;
  font-family: 'Oswald', serif;
  padding-bottom: 18px;
}
a {
  color: inherit;
}

.footer .container {
  padding-top: 30px;
  color: #999;
  width: 80%;
}



.col-sm-6 {
  padding-left: 3px;
  padding-right: 3px;
}
.container {
  width: 95%;
}


h3.article-title {
  color: #FFF;
  padding: 8px 20px;
  text-shadow: 0 2px 2px rgba(0,0,0,0.5);  
  z-index: 8;    
}

.blog {
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  -ms-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
.blog:hover {
  -webkit-transform: scale(1.02,1.02);
  -moz-transform: scale(1.02,1.02);
  -o-transform: scale(1.02,1.02);
  -ms-transform: scale(1.02,1.02);
 transform: scale(1.02,1.02);
}    

.col-md-6 {
  margin-right: 15px;
  margin-left: 15px;
}

.navbar-collapse a {
list-style-type: none;
font-family: 'Raleway', sans-serif;
text-transform: uppercase;
font-weight: normal;
color: #e2e2e2;
font-weight: 200;
font-size: 14px;
-webkit-transition-delay: 0s;
-webkit-transition-duration: 0.2s;
-webkit-transition-property: color;
-webkit-transition-timing-function: linear;
line-height: 25px;
vertical-align: middle;
}
.navbar-collapse a:hover {
color: #c8a555;
text-decoration: none;
}
.navbar-inverse {
background-color: #000;
}
.navbar {
min-height: 65px;
position: fixed;
width: 100%;
z-index: 1000;
top: 0;
}
a.selected {
color: #c8a555;
border-bottom: 1px solid #c8a555;
}
  .issue img {
  width: 100%;
}
.issue {
  
}
#main {
  margin-top: 85px;
  margin-bottom: 45px;
}


.row .image {
  margin: 5px 0px; 
}


.footer {
  background-color: #000;
  font-family: 'Raleway', sans-serif;
}


.ad300x250 {
width: 300px;
height: 250px;
margin-bottom: 30px;
}
@media (max-width: 991px) and (min-width: 768px) {
  #nav-menu a {
    margin-right: 30px;
    margin-left: 15px;
  }
  #nav-menu a:nth-child(4) {
    margin-right: 0px;
  }
  #nav-menu {
    right: 0;
    position: absolute;  }
}

@media (max-width: 992px) {
  .nav-social {
  margin-top: 63px;
  background-color: #000;
  width: 100%;
  text-align: center;
  right: inherit;
}
}
@media (max-width: 1102px) and (min-width: 993px) {
      #nav-menu a {
    margin-right: 45px;
    margin-left: 0px;
}


.navbar .container {
  width: 100%;
}

.entry::before {
  height: 100%;
  width: 100%;
  background-color: #000;
  opacity: 0;
  z-index: 1;
}
.entry:hover::before {
  background-color: #000;
  opacity: 0.4;
  z-index: 1;
}

article {
  overflow: hidden; 
  max-height: 420px;
}

